--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <img src="javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
                     height="140">
                 <h2>JavaScript</h2>
-                <p>It's a Dynamic Programming Language that's widely used for web development(both frontend and backend). Also used for web application, game development and lots more. It's the brain of the website. To learn JavaScript I prefer w3schools and the link is also given below.</p>
+                <p>It's a Dynamic Programming Language that's widely used for web development(both frontend and backend). Also used for web application, game development and lots more. It's the brain of the website. To learn JavaScript I prefer w3schools documentation. You can access the web from the link below.</p>
                 <p><a class="btn btn-outline-success" href="https://www.w3schools.com/js/default.asp" target = "_blank" role="button">Click here »</a></p>
             </div><!-- /.col-lg-4 -->
         </div>
