--- a/skills.html
+++ b/skills.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="Sohel.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top" /></a>
+                <img src="Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
