--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
 </head>
-<link rel="icon" href="Sohel.jpg" type="image/x-icon">
+<link rel="icon" href="/Images/Sohel.jpg" type="image/x-icon">
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family: 'Overpass', sans-serif;">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="Sohel.jpg" alt="" width="30" height="30"
+                <img src="/Images/Sohel.jpg" alt="" width="30" height="30"
                     class="d-inline-block align-text-top rounded-circle" /></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -69,28 +69,28 @@
         </div>
         <div class="carousel-inner carousel-fade ">
             <div class="carousel-item active">
-                <img src="carousel1.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="/Images/carousel1.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fw-bold">Something About Programming</h5>
                     <p>Current world is the ocean of Programming - The coolest thing in the present time.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="carousel2.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="/Images/carousel2.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Bug? Don't Worry</h5>
                     <p>Bugs are not a bug if they are doing something cool in your code</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="carousel3.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="/Images/carousel3.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p> -->
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="carousel4.jpg" class="d-block w-100 img-fluid" alt="...">
+                <img src="/Images/carousel4.jpg" class="d-block w-100 img-fluid" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <!-- <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p> -->
@@ -112,7 +112,7 @@
     <div class="container my-4" style="font-family: 'Rajdhani', sans-serif;">
         <div class="row">
             <div class="col-lg-4">
-                <img src="javaScript Icon.png" alt="#" class="bd-placeholder-img rounded-circle" width="140"
+                <img src="/Images/javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
                     height="140">
 
                 <h2>HTML</h2>
@@ -122,17 +122,17 @@
                 <p><a class="btn btn-outline-success" href="#">View details »</a></p>
             </div>
             <div class="col-lg-4">
-                <img src="javaScript Icon.png" alt="#" class="bd-placeholder-img rounded-circle" width="140"
+                <img src="/Images/javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
                     height="140">
 
                 <h2>CSS</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet impedit quod vero laudantium
-                    laboriosam asperiores ab illo quasi distinctio id aut, quam reprehenderit. Aut sequi neque voluptate
-                    iusto blanditiis voluptatum.</p>
-                <p><a class="btn btn-outline-success" href="#" target = "_blank" role="button">View details »</a></p>
-            </div><!-- /.col-lg-4 -->
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur adipisci facilis cupiditate
+                    similique! Impedit perspiciatis qui vel reiciendis? Fugiat, obcaecati commodi. Nihil aliquid
+                    voluptatum recusandae quod obcaecati reprehenderit rerum esse!</p>
+                <p><a class="btn btn-outline-success" href="#">View details »</a></p>
+            </div>
             <div class="col-lg-4">
-                <img src="javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
+                <img src="/Images/javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
                     height="140">
                 <h2>JavaScript</h2>
                 <p>It's a Dynamic Programming Language that's widely used for web development(both frontend and backend). Also used for web application, game development and lots more. It's the brain of the website. To learn JavaScript I prefer w3schools documentation. You can access the web from the link below.</p>
