--- a/skills.html
+++ b/skills.html
@@ -12,13 +12,13 @@
 
     <title>Welcome to Sohel's Portfolio</title>
 </head>
-<link rel="icon" href="Sohel.jpg" type="image/x-icon">
+<link rel="icon" href="/Images/Sohel.jpg" type="image/x-icon">
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
+                <img src="/Images/Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -52,12 +52,10 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src=..." class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cumque ea
-                            saepe reiciendis doloremque, recusandae earum est harum quas. Ipsa vitae rerum animi eius
-                            earum, expedita illo iure similique error?</p>
+                        <h5 class="card-title">JavaScript</h5>
+                        <p class="card-text">For building logic in Web Page as well as for BackedEnd I mostly used JS. Currently I don't have any project in organized manner which I can show there. But in the end of July I will develop a resposive website based on purely HTML, CSS and JS.</p>
                     </div>
                 </div>
             </div>
@@ -65,10 +63,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error eum velit
-                            vero aspernatur quos perferendis porro qui. Cupiditate, dolores, distinctio ab velit
-                            explicabo animi ullam minima vel rerum repellendus corrupti!</p>
+                        <h5 class="card-title">React</h5>
+                        <p class="card-text">React is nothing else but a library of JS. But a efficient way to build a User Interface. Same words are applied for React based project.</p>
                     </div>
                 </div>
             </div>
@@ -76,10 +72,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ut harum,
-                            aspernatur repellat nisi modi reiciendis id deleniti, aut, praesentium dicta perferendis
-                            fugit! Nihil facilis minima incidunt culpa distinctio doloremque!</p>
+                        <h5 class="card-title">NodeJS</h5>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
@@ -90,7 +84,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title"></h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cumque ea
                             saepe reiciendis doloremque, recusandae earum est harum quas. Ipsa vitae rerum animi eius
                             earum, expedita illo iure similique error?</p>
