--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
 
     <title>Welcome to Sohel's Portfolio</title>
 </head>
-<link rel="icon" href="Sohel.jpg" type="image/x-icon">
+<link rel="icon" href="/Images/Sohel.jpg" type="image/x-icon">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
+                <img src="/Images/Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
