--- a/contact_me.html
+++ b/contact_me.html
@@ -9,16 +9,16 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    </head>
 
     <title>Welcome to Sohel's Portfolio</title>
-</head>
-<link rel="icon" href="Sohel.jpg" type="image/x-icon">
+<link rel="icon" href="/Images/Sohel.jpg" type="image/x-icon">
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/index.html">
-                <img src="Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
+                <img src="/Images/Sohel.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top rounded-circle" /></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
