--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://github.com/sohelazmi/Portfolio/blob/master/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="https://sohelazmi.github.io/Portfolio/index.html">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/sohelazmi/Portfolio/blob/master/skills.html">Skills</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//skills.html">Skills</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/sohelazmi/Portfolio/blob/master/about.html">About</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/sohelazmi/Portfolio/blob/master/contact_me.html">Contact Me</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//contact_me.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
