--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//skills.html">Skills</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/skills.html">Skills</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//about.html">About</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio//contact_me.html">Contact Me</a>
+                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/contact_me.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
