--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="font-family: 'Overpass', sans-serif;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="Portfolio/index.html">
                 <img src="/Images/Sohel.jpg" alt="" width="30" height="30"
                     class="d-inline-block align-text-top rounded-circle" /></a>
 
@@ -31,19 +31,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://sohelazmi.github.io/Portfolio/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/Portfolio/index.html">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/skills.html">Skills</a>
+                        <a class="nav-link" href="/Portfolio/skills.html">Skills</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/about.html">About</a>
+                        <a class="nav-link" href="/Portfolio/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://sohelazmi.github.io/Portfolio/contact_me.html">Contact Me</a>
+                        <a class="nav-link" href="/Portfolio/contact_me.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
