--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="container my-4" style="font-family: 'Rajdhani', sans-serif;">
         <div class="row">
             <div class="col-lg-4">
-                <img src="/Images/javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
+                <img src="/Portfolio/Images/javaScript Icon.jpg" alt="#" class="bd-placeholder-img rounded-circle" width="140"
                     height="140">
 
                 <h2>HTML</h2>
